app/assets/stylesheets/_signup.sass
#user_birthday_1i, #user_birthday_2i, #user_birthday_3i
  width: 30%
#new_user
  .sectors-collection
    display: inline-block
    width: 100%
    span
      width: 33%
  .form-inputs
    span
      display: inline-block
  .custom
    display: inline !important
  
  input[type=checkbox]
    display: inline

  .collection_check_boxes
    display: inline
    margin-left: 5px
    margin-right: 20px

.list-sign_up
  margin-left: 15px

.container select
  -webkit-appearance: button
  -webkit-border-radius: 0px
  background-color: #fafafa
  background-image: url(/assets/arrow-select.svg)
  background-position: 100% center
  background-repeat: no-repeat
  border-style: solid
  border-width: 1px
  border-color: #cccccc
  padding: 0.44444rem
  font-size: 0.77778rem
  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif !important
  color: rgba(0, 0, 0, 0.75)
  line-height: normal
  border-radius: 0
  height: 2.05556rem

.container p 
  text-align: center

body p 
  text-aligner: center

label 
  font-size: 0.8em

